# RAG_Diagnostic_Agent

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  KAGGLE_GUIDE.md  LAW.md  README.md  README_HF.md  config.dev.yaml  config.yaml  kaggle_train.py  main.py  mlflow.db  prepare_for_kaggle.sh  pyproject.toml  requirements.txt  run.py  vercel.json
api/: index.py
app/: dependencies.py  main.py  middleware.py  model_loader.py  predict.py  streamlit.py
app/routers/: __init__.py  health.py  prediction.py
app/schemas/: __init__.py  request.py  response.py
app/static/: index.html
frontend/: README.md  index.html  package.json
frontend/css/: styles.css
frontend/js/: main.js
notebook/: dataset_merge.ipynb  plantvillage_balance_dataset.ipynb  plantvillage_class_counts.ipynb
src/: utils.py
src/data/: __init__.py  balancing.py  common.py  dataset.py  encoder.py  loader.py  splitting.py  transforms.py
src/model/: __init__.py  evaluation.py  loader.py  model.py  prediction.py  train.py
src/orchestrator/: __init__.py  main.py
src/pipelines/: __init__.py  data_preprocessing.py  data_splitting.py  model_evaluation.py  model_training.py
src/rag/: __init__.py  ingest.py
src/vision/: __init__.py  train.py
