[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "rag-diagnostic-agent"
version = "0.1.0"
description = "Multi-modal Agentic AI system for plant disease diagnosis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "langchain==1.2.14",
    "langchain-community==0.4.1",
    "chromadb==1.5.5",
    "ollama==0.6.1",
    "fastapi==0.135.3",
    "streamlit==1.56.0",
    "uvicorn[standard]==0.36.0",
    "pydantic==2.10.6",
    "python-multipart==0.0.20",
    "jinja2==3.1.5",
    "itsdangerous==2.2.0",
    "pandas>=2.0.0,<3.0.0",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "mlflow>=2.13.0",
]
